Blinkのリリース処理を作成