@@ -2,9 +2,12 @@ package com.genpyon.Item.Wolf;
 
 import java.util.HashMap;
 
+import org.bukkit.Location;
+import org.bukkit.Material;
 import org.bukkit.Sound;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.util.Vector;
 
 import com.genpyon.Main;
 import com.genpyon.Item.AbstractItem;
@@ -31,7 +34,7 @@ public class Blink extends AbstractItem {
 	public static void chargeBlink(Player p) {
 		Integer power = blinkPower.get(p);
 		if (power == null) {
-			power = new Integer(0);
+			power = Integer.valueOf(0);
 			blinkPower.put(p, 0);
 			p.playSound(p.getLocation(), Sound.ENTITY_GHAST_WARN, 0.5F, 1F);
 		}
@@ -42,10 +45,25 @@ public class Blink extends AbstractItem {
 	public static void releaseBlink(Player p) {
 		Integer power = blinkPower.get(p);
 		if (power == null) {
-			power = new Integer(0);
+			power = Integer.valueOf(0);
 			blinkPower.put(p, 0);
 		}
+		p.getWorld().playSound(p.getLocation(), Sound.ENTITY_GHAST_SHOOT, 1.3F, 0.5F);
 
+		Location loc = p.getLocation().clone();
+		loc.add(0, p.getEyeHeight(), 0);
+		if (power > 20) power = 20;
+
+		Vector vec = loc.getDirection().normalize();
+		Location to = p.getLocation().clone();
+		for (int i = 0; i<power; vec.multiply(i)) {
+			loc.add(vec);
+			if (loc.getBlock().getType() != Material.AIR) break;
+			to = loc;
+			loc.subtract(vec);
+		}
+
+		p.teleport(to);
 		blinkPower.remove(p);
 	}
 
